--- a/Moe.Afa.Utils.API/Moe.Afa.Utils.API.csproj
+++ b/Moe.Afa.Utils.API/Moe.Afa.Utils.API.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Azure.Data.Tables" Version="12.7.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
