--- a/Moe.Afa.Utils.API/appsettings.Development.json
+++ b/Moe.Afa.Utils.API/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "PotekoOfficeStatusSettings": {
+    "UpdatePassword": "dummy"
+  },
+  "ConnectionStrings": {
+    "TableStorage": ""
   }
 }
